--- a/assets/scss/shared-ui/_sui-button/_button-elements/_button-icon.scss
+++ b/assets/scss/shared-ui/_sui-button/_button-elements/_button-icon.scss
@@ -13,6 +13,7 @@
 
 			@include element('icon') {
 				flex: 0 0 auto;
+				margin: 0 3px;
 
 				&:before {
 					display: block;
