--- a/assets/scss/shared-ui/_sui-button/_button-elements/_button-label.scss
+++ b/assets/scss/shared-ui/_sui-button/_button-elements/_button-label.scss
@@ -14,6 +14,7 @@
 			@include element('label') {
 				display: block;
 				flex: 0 0 auto;
+				margin: 0 3px;
 			}
 		}
 	}
