--- a/assets/scss/shared-ui/_sui-button/_sui-button.scss
+++ b/assets/scss/shared-ui/_sui-button/_sui-button.scss
@@ -11,7 +11,6 @@ $block-name: button;
 @include sui-button--element.button-loader($block-name);
 
 // Button modifiers.
-@include sui-button--modifier.button-icon($block-name);
 @include sui-button--modifier.button-size($block-name);
 @include sui-button--modifier.button-design--type($block-name);
 @include sui-button--modifier.button-design--color($block-name);
